--- a/client/src/components/Dashboardtulu/styles.css
+++ b/client/src/components/Dashboardtulu/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .background {
     background-image: "url('../src/images/tulu-background1.png')";
     height: 100%;
